traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:25: error: ';' expected but 'if' found.
    } if (x > w -1) {
      ^